2010-06-21  Andy Buckley  <andy@insectnation.org>

	* Using .info file beam ID and energy info in HTML and LaTeX documentation.

	* Using .info file beam ID and energy info in command-line printout.

	* Fixing a couple of references to temporary variables in the
	analysis beam info, which had been introduced during refactoring:
	have reinstated reference-type returns as the more efficient
	solution. This should not affect API compatibility.

	* Making SWIG configure-time check include testing for
	incompatibilities with the C++ compiler (re. the recurring _const_
	char* literals issue).

	* Various tweaks to scripts: make-plots and compare-histos
	processes are now renamed (on Linux), rivet-config is avoided when
	computing the Rivet version,and RIVET_REF_PATH is also set using
	the rivet --analysis-path* flags. compare-histos now uses multiple
	ref data paths for .aida file globbing.

	* Hendrik changed VetoedFinalState comparison to always return
	UNDEFINED if vetoing on the results of other FS projections is
	being used. This is the only simple way to avoid problems
	emanating from the remainingFinalState thing.

2010-06-19  Andy Buckley  <andy@insectnation.org>

	* Adding --analysis-path and --analysis-path-append command-line
	flags to the rivet script, as a "persistent" way to set or extend
	the RIVET_ANALYSIS_PATH variable.

	* Changing -Q/-V script verbosity arguments to more standard
	-q/-v, after Hendrik moaned about it ;)

	* Small fix to TinyXML operator precendence: removes a warning,
	and I think fixes a small bug.

	* Adding plotinfo entries for new jet rapidity and jet mass plots
	in MC_JetAnalysis derivatives.

	* Moving MC_JetAnalysis base class into a new
	libRivetAnalysisTools library, with analysis base class and helper
	headers to be stored in the reinstated Rivet/Analyses include
	directory.

2010-06-08  Andy Buckley  <andy@insectnation.org>

	* Removing check for CEDARSTD #define guard, since we no longer