@@ -44,6 +44,7 @@ namespace Rivet {
 #include "Rivet/Math/Matrices.hh"
 #include "Rivet/Math/Units.hh"
 #include "Rivet/Tools/Utils.hh"
+#include "Rivet/Tools/RivetPaths.hh"
 
 #include "Rivet/ParticleName.hh"
 #include "Rivet/Particle.hh"
